--- a/script/styles/_{{filename}}.css.template
+++ b/script/styles/_{{filename}}.css.template
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "{{fontname}}";
+  font-family: '{{fontname}}';
   src: url('{{cssPath}}{{fontname}}.eot?t={{timestamp}}'); /* IE9*/
   src: url('{{cssPath}}{{fontname}}.eot?t={{timestamp}}#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('{{cssPath}}{{fontname}}.woff2?t={{timestamp}}') format('woff2'),
@@ -8,13 +8,12 @@
   url('{{cssPath}}{{fontname}}.svg?t={{timestamp}}#{{fontname}}') format('svg'); /* iOS 4.1- */
 }
 
-[class^="{{prefix}}-"], [class*=" {{prefix}}-"] {
+[class^='{{prefix}}-'], [class*=' {{prefix}}-'] {
   font-family: '{{fontname}}' !important;
-  font-size:{{fontSize}};
-  font-style:normal;
+  font-size: {{fontSize}};
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 {{cssString}}
