--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 node_modules
 script/data/build.data.regular.json
 script/data/build.data.solid.json
+script/data/build.data.modern.json
 yarn-error.log
