--- a/script/styles/_{{filename}}.scss.template
+++ b/script/styles/_{{filename}}.scss.template
@@ -10,6 +10,7 @@
 
 [class^='{{prefix}}-'], [class*=' {{prefix}}-'] {
   font-family: '{{fontname}}' !important;
+  font-size: {{fontSize}};
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
