--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluentui-emoji",
-  "version": "0.0.0-beta.0.0.6",
+  "version": "0.0.7",
   "description": "Fluentui Emoji an npm package contains a number of well-known, cordial, and contemporary emoji, build into @microsoft/fluentui-emoji",
   "keywords": [
     "fluentui",
@@ -38,19 +38,19 @@
     "publish": "npm publish"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.33.0",
-    "@typescript-eslint/parser": "5.33.0",
-    "esbuild": "0.15.2",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "esbuild": "0.15.10",
     "esbuild-runner": "2.2.1",
-    "eslint": "8.21.0",
+    "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "prettier": "2.7.1",
-    "recursive-directory": "0.0.0-rc-0.0.4",
+    "recursive-directory": "0.0.8",
     "svgo": "2.8.0",
-    "typescript": "4.7.4"
+    "typescript": "4.8.4"
   },
   "sideEffects": false,
   "files": [
