--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluentui-emoji",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Fluentui Emoji an npm package contains a number of well-known, cordial, and contemporary emoji, build into @microsoft/fluentui-emoji",
   "keywords": [
     "fluentui",
@@ -34,23 +34,24 @@
     "svg:optmize:flat": "svgo -f svg/flat -o icons/flat",
     "svg:optmize:modern": "svgo -f svg/modern -o icons/modern",
     "svg:optmize": "yarn svg:optmize:high-contrast && yarn svg:optmize:flat && yarn svg:optmize:modern",
-    "svg:get-data": "node -r esbuild-runner/register script/data/build.data.ts",
+    "svg:get-data": "node -r esbuild-runner/register script/build.data.ts",
     "publish": "npm publish"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.38.1",
-    "@typescript-eslint/parser": "5.38.1",
-    "esbuild": "0.15.10",
-    "esbuild-runner": "2.2.1",
-    "eslint": "8.24.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-simple-import-sort": "8.0.0",
-    "eslint-plugin-unused-imports": "2.0.0",
-    "prettier": "2.7.1",
-    "recursive-directory": "0.0.8",
-    "svgo": "2.8.0",
-    "typescript": "4.8.4"
+    "@types/node": "20.4.8",
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
+    "esbuild": "0.18.19",
+    "esbuild-runner": "2.2.2",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "prettier": "3.0.1",
+    "recursive-directory": "1.2.3",
+    "svgo": "3.0.2",
+    "typescript": "5.1.6"
   },
   "sideEffects": false,
   "files": [
