feat: Optimize pkg

--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   "homepage": "https://MKAbuMattar.github.io/fluentui-emoji",
   "scripts": {
     "fluentui-emoji:clean:clone": "rimraf private-fluentui-emoji",
+    "fluentui-emoji:clean:svg": "rimraf svg",
+    "fluentui-emoji:clean:icons": "rimraf icons",
+    "fluentui-emoji:clean:icons-pkg": "rimraf packages/fluentui-emoji/icons",
     "fluentui-emoji:clone": "npm run fluentui-emoji:clean:clone && tsx script/git-clone.config.ts",
+    "fluentui-emoji:svg": "npm run fluentui-emoji:clean:svg && tsx script/copy-svg.script.ts",
+    "fluentui-emoji:icons": "npm run fluentui-emoji:clean:icons-pkg && tsx script/copy-icons.script.ts",
     "svg:optmize:flat": "svgo --config svgo.config.cjs -f svg/flat -o icons/flat",
     "svg:optmize:high-contrast": "svgo --config svgo.config.cjs -f svg/high-contrast -o icons/high-contrast",
     "svg:optmize:modern": "svgo --config svgo.config.cjs -f svg/modern -o icons/modern",
-    "svg:optmize": "npm run svg:optmize:flat && npm run svg:optmize:high-contrast && npm run svg:optmize:modern",
+    "svg:optmize": "npm run fluentui-emoji:clean:icons && npm run svg:optmize:flat && npm run svg:optmize:high-contrast && npm run svg:optmize:modern",
     "lint": "biome check ./script",
     "lint:fix": "biome check ./script --fix",
     "fmt": "biome format ./script",
@@ -32,7 +37,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@types/fs-extra": "11.0.4",
     "@types/node": "22.5.0",
+    "fs-extra": "11.2.0",
     "recursive-directory": "1.2.3",
     "rimraf": "6.0.1",
     "svgo": "3.3.2",
