--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "svg:optmize:modern": "svgo --config svgo.config.cjs -f svg/modern -o icons/modern",
     "svg:optmize": "npm run fluentui-emoji:clean:icons && npm run svg:optmize:flat && npm run svg:optmize:high-contrast && npm run svg:optmize:modern",
     "svg:get-data": "tsx script/build.data.ts",
-    "build": "npm run fluentui-emoji:clone && npm run fluentui-emoji:svg && npm run svg:optmize && npm run svg:get-data && npm run fluentui-emoji:icons",
+    "build": "npm run fluentui-emoji:clone && npm run fluentui-emoji:svg && npm run svg:optmize && npm run svg:get-data && npm run fluentui-emoji:icons && npm run fluentui-emoji:clean:svg && npm run fluentui-emoji:clean:icons",
     "lint": "biome check ./script",
     "lint:fix": "biome check ./script --fix",
     "fmt": "biome format ./script",
@@ -41,11 +41,13 @@
     "@biomejs/biome": "1.8.3",
     "@types/fs-extra": "11.0.4",
     "@types/node": "22.5.0",
+    "@types/uuid": "10.0.0",
     "fs-extra": "11.2.0",
     "recursive-directory": "1.2.3",
     "rimraf": "6.0.1",
     "svgo": "3.3.2",
     "tsx": "4.17.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "uuid": "10.0.0 "
   }
 }
