fix: optimize and fix the svgs

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "svg:optmize:modern": "svgo --config svgo.config.cjs -f svg/modern -o icons/modern",
     "svg:optmize": "npm run fluentui-emoji:clean:icons && npm run svg:optmize:flat && npm run svg:optmize:high-contrast && npm run svg:optmize:modern",
     "svg:get-data": "tsx script/build.data.ts",
-    "build": "npm run fluentui-emoji:clone && npm run fluentui-emoji:svg && npm run svg:optmize && npm run svg:get-data && npm run fluentui-emoji:icons && npm run fluentui-emoji:clean:svg && npm run fluentui-emoji:clean:icons",
+    "build": "npm run fluentui-emoji:clone && npm run fluentui-emoji:svg && npm run svg:optmize && npm run svg:get-data && npm run fluentui-emoji:icons && npm run fluentui-emoji:clean:clone && npm run fluentui-emoji:clean:svg && npm run fluentui-emoji:clean:icons",
     "lint": "biome check ./script",
     "lint:fix": "biome check ./script --fix",
     "fmt": "biome format ./script",
