refactor: update paths and configurations for public-fluentui-emoji
- Changed source directory in copy-svg script from 'private-fluentui-emoji' to 'public-fluentui-emoji'.
- Updated git clone command to clone from 'public-fluentui-emoji' repository.
- Added VS Code workspace recommendations and settings for improved development experience.
- Introduced biome configuration for consistent formatting and linting rules across the project.

--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
   },
   "homepage": "https://MKAbuMattar.github.io/fluentui-emoji",
   "scripts": {
-    "fluentui-emoji:clean:clone": "rimraf private-fluentui-emoji",
+    "fluentui-emoji:clean:clone": "rimraf public-fluentui-emoji",
     "fluentui-emoji:clean:svg": "rimraf svg",
     "fluentui-emoji:clean:icons": "rimraf icons",
     "fluentui-emoji:clean:icons-pkg": "rimraf packages/fluentui-emoji/icons",
-    "clean": "npm run fluentui-emoji:clean:clone && npm run fluentui-emoji:clean:svg && npm run fluentui-emoji:clean:icons && npm run fluentui-emoji:clean:icons-pkg",
-    "fluentui-emoji:clone": "npm run fluentui-emoji:clean:clone && tsx script/git-clone.config.ts",
-    "fluentui-emoji:svg": "npm run fluentui-emoji:clean:svg && tsx script/copy-svg.script.ts",
-    "fluentui-emoji:icons": "npm run fluentui-emoji:clean:icons-pkg && tsx script/copy-icons.script.ts",
+    "clean": "pnpm fluentui-emoji:clean:clone && pnpm fluentui-emoji:clean:svg && pnpm fluentui-emoji:clean:icons && pnpm fluentui-emoji:clean:icons-pkg",
+    "fluentui-emoji:clone": "pnpm fluentui-emoji:clean:clone && tsx script/git-clone.config.ts",
+    "fluentui-emoji:svg": "pnpm fluentui-emoji:clean:svg && tsx script/copy-svg.script.ts",
+    "fluentui-emoji:icons": "pnpm fluentui-emoji:clean:icons-pkg && tsx script/copy-icons.script.ts",
     "svg:optmize:flat": "svgo --config svgo.config.cjs -f svg/flat -o icons/flat",
     "svg:optmize:high-contrast": "svgo --config svgo.config.cjs -f svg/high-contrast -o icons/high-contrast",
     "svg:optmize:modern": "svgo --config svgo.config.cjs -f svg/modern -o icons/modern",
-    "svg:optmize": "npm run fluentui-emoji:clean:icons && npm run svg:optmize:flat && npm run svg:optmize:high-contrast && npm run svg:optmize:modern",
+    "svg:optmize": "pnpm fluentui-emoji:clean:icons && pnpm svg:optmize:flat && pnpm svg:optmize:high-contrast && pnpm svg:optmize:modern",
     "svg:get-data": "tsx script/build.data.ts",
-    "build": "npm run fluentui-emoji:clone && npm run fluentui-emoji:svg && npm run svg:optmize && npm run svg:get-data && npm run fluentui-emoji:icons && npm run fluentui-emoji:clean:clone && npm run fluentui-emoji:clean:svg && npm run fluentui-emoji:clean:icons",
+    "build": "pnpm fluentui-emoji:clone && pnpm fluentui-emoji:svg && pnpm svg:optmize && pnpm svg:get-data && pnpm fluentui-emoji:icons && pnpm fluentui-emoji:clean:clone && pnpm fluentui-emoji:clean:svg && pnpm fluentui-emoji:clean:icons",
     "lint": "biome check ./script",
     "lint:fix": "biome check ./script --fix",
     "fmt": "biome format ./script",
     "fmt:fix": "biome format --write ./script"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.2",
+    "@biomejs/biome": "2.2.4",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "24.1.0",
+    "@types/node": "24.4.0",
     "@types/uuid": "10.0.0",
-    "fs-extra": "11.3.0",
+    "fs-extra": "11.3.1",
     "recursive-directory": "1.2.3",
     "rimraf": "6.0.1",
     "svgo": "4.0.0",
-    "tsx": "4.20.3",
-    "typescript": "5.8.3",
-    "uuid": "11.1.0"
+    "tsx": "4.20.5",
+    "typescript": "5.9.2",
+    "uuid": "13.0.0"
   }
 }
