--- a/packages/fluentui-emoji/package.json
+++ b/packages/fluentui-emoji/package.json
@@ -2,7 +2,13 @@
   "name": "fluentui-emoji",
   "version": "1.3.0",
   "description": "Fluentui Emoji an npm package contains a number of well-known, cordial, and contemporary emoji, build into @microsoft/fluentui-emoji",
-  "keywords": ["fluentui", "emoji", "fluentui-emoji", "icons", "svg"],
+  "keywords": [
+    "fluentui",
+    "emoji",
+    "fluentui-emoji",
+    "icons",
+    "svg"
+  ],
   "license": "MIT",
   "author": {
     "name": "Mohammad Abu Mattar",
@@ -21,7 +27,9 @@
   "dependencies": {},
   "devDependencies": {},
   "sideEffects": false,
-  "files": ["/icons"],
+  "files": [
+    "/icons"
+  ],
   "support": {
     "backing": {
       "npm-funding": true
